User sessions not control data returned by db.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "",
+    "cookie-parser": "^1.4.5",
     "debug": "",
     "ejs": "",
     "express": "",
