--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "CS-160",
+  "name": "cs-160",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "body-parser": "",
+    "body-parser":   "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "debug": "",
-    "ejs": "",
-    "supertest": "",
-    "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "ejs":           "^3.1.2",
+    "express":       "^4.17.1",
+    "jest":          "^25.5.4",
+    "mysql":         "^2.18.1",
+    "supertest":     "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node",
